# nn

./: .gitignore  Cargo.toml  build.rs  saved_nn.json
src/: basic.rs  main.rs  nn.rs  preloaded.rs  sdl.rs  tekenen.rs
src/basic/: nn.rs
