[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["serde"] }
image = "0.24.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tekenen = {path = "../tekenen/tekenen"}

[build-dependencies]
preloader = { path = "../tekenen/preloader" }

[profile.release]
debug = true
incremental = true